<resources>
    <string name="app_name">OTP Verification Using Firebasse</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">we will send you an one time password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_880">+880</string>
    <string name="_123456789">1234567890</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_send_to">Enter The OTP Send to</string>
    <string name="hint">1</string>
    <string name="didn_t_receive_the_otp">Didn\'t Receive The OTP ?</string>
    <string name="resend">Resend OTP</string>
    <string name="verify">Verify</string>
</resources>