<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendOTPActivity">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:background="@drawable/send"
            android:layout_marginTop="@dimen/_64sdp"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/_880"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:gravity="center"/>
            <EditText
                android:id="@+id/inputMobile"
                android:inputType="number"
                android:importantForAutofill="no"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/_123456789"
                android:layout_gravity="center|start"
                android:background="@null"
                android:imeOptions="actionDone"
                android:layout_marginStart="@dimen/_2sdp"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextSecondary"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:gravity="center|start"/>


        </LinearLayout>

      <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_64sdp"
            android:layout_marginEnd="@dimen/_64sdp"
            android:background="@color/colorDivider"
            android:layout_marginTop="@dimen/_8sdp">

      </View>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonGetOTP"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_30sdp"
                android:background="@drawable/button_background"
                android:text="@string/get_otp"
                android:textColor="@color/coloWhite"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:visibility="gone"
                android:layout_gravity="center"/>

        </FrameLayout>
        


    </LinearLayout>

</ScrollView>