<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:background="@drawable/received"
            android:layout_marginTop="@dimen/_64sdp"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/textMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/enter_the_otp_send_to"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            >


            <EditText
                android:id="@+id/inutcode1"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:hint="@string/hint"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inutcode2"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:hint="@string/hint"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inutcode3"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:hint="@string/hint"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inutcode4"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:hint="@string/hint"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inutcode5"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:hint="@string/hint"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inutcode6"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:layout_gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:hint="@string/hint"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_12ssp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/resend"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_13ssp"
                android:gravity="center"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_30sdp"
                android:background="@drawable/button_background"
                android:text="@string/verify"
                android:textColor="@color/coloWhite"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:visibility="gone"
                android:layout_gravity="center"/>

        </FrameLayout>


    </LinearLayout>
</ScrollView>